--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "liveServer.settings.port": 5501,
-    "python.pythonPath": "C:\\Users\\daksh\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
+    "liveServer.settings.port": 5501
 }
