--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    "python.pythonPath": "C:\\Users\\daksh\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
 }
